--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,8 @@
     </head>
     <body>
         <div class="main-content">
-            {{>header}}     
+            {{>header}} 
+            <p>This site was created by Marco Horner. It uses data from mapbox.com</p>    
             <img class="portrait" src="/images/cr7.jpg">
         </div>
         {{>footer}}    
